src/objects/Queue_Lead_Tasks__mdt.object
<CustomObject>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <label>Chatter Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Task_from_Form_API__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create Task from Form API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gate_Keeper__c</fullName>
        <label>Gate Keeper</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Campaign_ID__c</fullName>
        <label>MQL Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_For_Task_Record_name__c</fullName>
        <label>Queue For Task Record name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_for_Case_Name__c</fullName>
        <label>Queue for Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_for_Case__c</fullName>
        <label>Queue for Case</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_for_Lead_Name__c</fullName>
        <label>Queue for Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_for_Lead__c</fullName>
        <label>Queue for Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_for_Task_Record__c</fullName>
        <label>Queue for Task Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touchpoint_Type__c</fullName>
        <label>Touchpoint Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Queue Lead Task</label>
    <listViews>
        <fullName>All_View</fullName>
        <columns>DeveloperName</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>Queue_For_Task_Record_name__c</columns>
        <columns>Queue_for_Task_Record__c</columns>
        <columns>Queue_for_Lead_Name__c</columns>
        <columns>Queue_for_Lead__c</columns>
        <columns>MQL_Campaign_ID__c</columns>
        <columns>Gate_Keeper__c</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Queue Lead Tasks</pluralLabel>
</CustomObject>